# cnc

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  app.yaml  cli_cnc.py  cnc-35.html  cnc.py  cnc.sh  cnc10.py  cnc_flask.py  cnc_gae.py  cnc_gui.py  cnc_shell.py  cnc_shell10.py  debug.py  hp35stack.py  logcnc.py  main.py  new_shell.py  octonion.py  pylintrc  pyproject.toml  quaternion.py  requirements.txt  shell.py  test_gui_functionality.py  trace_debug.py
.beads/: config.yaml  issues.jsonl  last-touched
.github/workflows/: pylint.yml
.vibe/: beads-state-cnc-feat-GUI-q5waj8.json  beads-state-cnc-feature-quaternion-octonion-support-3y8lot.json  beads-state-cnc-main-w47rrt.json  development-plan-feat-GUI.md  development-plan-feature-quaternion-octonion-support.md  development-plan.md
.vibe/conversations/cnc-main-w47rrt/: interactions.jsonl  state.json
.vibe/docs/: architecture.md  design.md  requirements.md
static/: keyboard.css
templates/: cnc-35.html  info.html  layout.html  status.html
tests/: compare_renders.py  crop_reference.py  screenshot_bmp.py  test_color_calibration.py  test_color_channels.py  test_colors.py  test_pixel_formats.py  test_quaternion_octonion.py
