[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnc"
version = "2.0"
readme = "README.md"
description = "CNC - complex number calculator"
authors = [
    { name = "Marc Donner", email = "marc@nygeek.net" },
    ]
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["cnc", "cnc10", "hp35stack"]
